// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PINVerify Screen Keyboard submits PIN on enter 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "padding": 16,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#000000",
                "flex": 1,
                "justifyContent": "space-between",
                "padding": 20,
              }
            }
          >
            <View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 32,
                      "fontWeight": "bold",
                    },
                    Object {
                      "marginBottom": 40,
                      "marginTop": 0,
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsHeader
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 40,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsSubtext
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 20,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsInputLabel
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 14,
                        "fontWeight": "normal",
                      },
                      undefined,
                    ]
                  }
                >
                   
                  PINEnter.ChangeBiometricsInputLabelParenthesis
                </Text>
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "marginBottom": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#25272A",
                      "borderColor": "#FFFFFF",
                      "borderRadius": 25,
                      "borderWidth": 1.5,
                      "flexDirection": "row",
                      "height": 56,
                      "opacity": 0.8,
                      "paddingHorizontal": 16,
                    }
                  }
                >
                  <TextInput
                    accessibilityLabel="PINEnter.ChangeBiometricsInputLabel"
                    accessible={true}
                    autoFocus={true}
                    keyboardType="number-pad"
                    onChangeText={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder=""
                    placeholderTextColor="#888888"
                    secureTextEntry={true}
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "flex": 1,
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "paddingVertical": 0,
                        "textAlignVertical": "center",
                      }
                    }
                    testID="com.ariesbifold:id/BiometricChangedEnterPIN"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="PINCreate.Show"
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      Object {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={
                      Object {
                        "bottom": 44,
                        "left": 44,
                        "right": 44,
                        "top": 44,
                      }
                    }
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                        "paddingLeft": 12,
                      }
                    }
                    testID="com.ariesbifold:id/Show"
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 24,
                          },
                          undefined,
                          Object {
                            "fontFamily": "Material Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityLabel="Global.Continue"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/Continue"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          false,
                          false,
                        ],
                      ]
                    }
                  >
                    Global.Continue
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;

exports[`PINVerify Screen PIN Verify renders correctly 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "padding": 16,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#000000",
                "flex": 1,
                "justifyContent": "space-between",
                "padding": 20,
              }
            }
          >
            <View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 40,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.AppSettingChanged
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 20,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.AppSettingChangedEnterPIN
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "marginBottom": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#25272A",
                      "borderColor": "#FFFFFF",
                      "borderRadius": 25,
                      "borderWidth": 1.5,
                      "flexDirection": "row",
                      "height": 56,
                      "opacity": 0.8,
                      "paddingHorizontal": 16,
                    }
                  }
                >
                  <TextInput
                    accessibilityLabel="PINEnter.AppSettingChangedEnterPIN"
                    accessible={true}
                    autoFocus={true}
                    keyboardType="number-pad"
                    onChangeText={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder=""
                    placeholderTextColor="#888888"
                    secureTextEntry={true}
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "flex": 1,
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "paddingVertical": 0,
                        "textAlignVertical": "center",
                      }
                    }
                    testID="com.ariesbifold:id/AppSettingChangedEnterPIN"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="PINCreate.Show"
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      Object {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={
                      Object {
                        "bottom": 44,
                        "left": 44,
                        "right": 44,
                        "top": 44,
                      }
                    }
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                        "paddingLeft": 12,
                      }
                    }
                    testID="com.ariesbifold:id/Show"
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 24,
                          },
                          undefined,
                          Object {
                            "fontFamily": "Material Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityLabel="PINEnter.AppSettingSave"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/AppSettingSave"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          false,
                          false,
                        ],
                      ]
                    }
                  >
                    PINEnter.AppSettingSave
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                Array [
                  Object {
                    "width": "100%",
                  },
                  Object {
                    "marginTop": 10,
                  },
                ]
              }
            >
              <View
                accessibilityLabel="PINEnter.AppSettingCancel"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": false,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "borderColor": "#42803E",
                    "borderRadius": 4,
                    "borderWidth": 2,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/AppSettingCancel"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Array [
                          Object {
                            "color": "#42803E",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          false,
                          false,
                          false,
                        ],
                      ]
                    }
                  >
                    PINEnter.AppSettingCancel
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;

exports[`PINVerify Screen PIN Verify renders correctly for biometrics change 1`] = `
<RNCSafeAreaView
  edges={
    Object {
      "bottom": "additive",
      "left": "additive",
      "right": "additive",
      "top": "off",
    }
  }
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "flex": 1,
        },
        Object {
          "paddingBottom": 0,
        },
      ]
    }
  >
    <RCTScrollView
      contentContainerStyle={
        Array [
          Object {
            "flexGrow": 1,
          },
          undefined,
        ]
      }
      keyboardShouldPersistTaps="handled"
      showsVerticalScrollIndicator={false}
    >
      <View>
        <View
          style={
            Array [
              Object {
                "padding": 16,
              },
              undefined,
            ]
          }
        >
          <View
            style={
              Object {
                "backgroundColor": "#000000",
                "flex": 1,
                "justifyContent": "space-between",
                "padding": 20,
              }
            }
          >
            <View>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 32,
                      "fontWeight": "bold",
                    },
                    Object {
                      "marginBottom": 40,
                      "marginTop": 0,
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsHeader
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 40,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsSubtext
              </Text>
              <Text
                maxFontSizeMultiplier={2}
                style={
                  Array [
                    Object {
                      "color": "#FFFFFF",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    Object {
                      "alignSelf": "auto",
                      "marginBottom": 20,
                      "textAlign": "left",
                    },
                  ]
                }
              >
                PINEnter.ChangeBiometricsInputLabel
                <Text
                  maxFontSizeMultiplier={2}
                  style={
                    Array [
                      Object {
                        "color": "#FFFFFF",
                        "fontSize": 14,
                        "fontWeight": "normal",
                      },
                      undefined,
                    ]
                  }
                >
                   
                  PINEnter.ChangeBiometricsInputLabelParenthesis
                </Text>
              </Text>
              <View
                style={
                  Object {
                    "flexDirection": "column",
                    "marginBottom": 24,
                  }
                }
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "backgroundColor": "#25272A",
                      "borderColor": "#FFFFFF",
                      "borderRadius": 25,
                      "borderWidth": 1.5,
                      "flexDirection": "row",
                      "height": 56,
                      "opacity": 0.8,
                      "paddingHorizontal": 16,
                    }
                  }
                >
                  <TextInput
                    accessibilityLabel="PINEnter.ChangeBiometricsInputLabel"
                    accessible={true}
                    autoFocus={true}
                    keyboardType="number-pad"
                    onChangeText={[Function]}
                    onSubmitEditing={[Function]}
                    placeholder=""
                    placeholderTextColor="#888888"
                    secureTextEntry={true}
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "flex": 1,
                        "fontFamily": "System",
                        "fontSize": 16,
                        "fontWeight": "500",
                        "paddingVertical": 0,
                        "textAlignVertical": "center",
                      }
                    }
                    testID="com.ariesbifold:id/BiometricChangedEnterPIN"
                    textContentType="password"
                    value=""
                  />
                  <View
                    accessibilityLabel="PINCreate.Show"
                    accessibilityRole="button"
                    accessibilityState={
                      Object {
                        "busy": undefined,
                        "checked": undefined,
                        "disabled": undefined,
                        "expanded": undefined,
                        "selected": undefined,
                      }
                    }
                    accessibilityValue={
                      Object {
                        "max": undefined,
                        "min": undefined,
                        "now": undefined,
                        "text": undefined,
                      }
                    }
                    accessible={true}
                    collapsable={false}
                    focusable={true}
                    hitSlop={
                      Object {
                        "bottom": 44,
                        "left": 44,
                        "right": 44,
                        "top": 44,
                      }
                    }
                    onClick={[Function]}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Object {
                        "opacity": 1,
                        "paddingLeft": 12,
                      }
                    }
                    testID="com.ariesbifold:id/Show"
                  >
                    <Text
                      allowFontScaling={false}
                      selectable={false}
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 24,
                          },
                          undefined,
                          Object {
                            "fontFamily": "Material Icons",
                            "fontStyle": "normal",
                            "fontWeight": "normal",
                          },
                          Object {},
                        ]
                      }
                    >
                      
                    </Text>
                  </View>
                </View>
              </View>
            </View>
            <View
              style={
                Object {
                  "width": "100%",
                }
              }
            >
              <View
                accessibilityLabel="Global.Continue"
                accessibilityRole="button"
                accessibilityState={
                  Object {
                    "busy": undefined,
                    "checked": undefined,
                    "disabled": true,
                    "expanded": undefined,
                    "selected": undefined,
                  }
                }
                accessibilityValue={
                  Object {
                    "max": undefined,
                    "min": undefined,
                    "now": undefined,
                    "text": undefined,
                  }
                }
                accessible={true}
                collapsable={false}
                focusable={true}
                onClick={[Function]}
                onResponderGrant={[Function]}
                onResponderMove={[Function]}
                onResponderRelease={[Function]}
                onResponderTerminate={[Function]}
                onResponderTerminationRequest={[Function]}
                onStartShouldSetResponder={[Function]}
                style={
                  Object {
                    "backgroundColor": "rgba(53, 130, 63, 0.35)",
                    "borderRadius": 4,
                    "opacity": 1,
                    "padding": 16,
                  }
                }
                testID="com.ariesbifold:id/Continue"
              >
                <View
                  style={
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    maxFontSizeMultiplier={2}
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontSize": 18,
                          "fontWeight": "normal",
                        },
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          Object {
                            "color": "#FFFFFF",
                            "fontSize": 18,
                            "fontWeight": "bold",
                            "textAlign": "center",
                          },
                          false,
                          false,
                        ],
                      ]
                    }
                  >
                    Global.Continue
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </RCTScrollView>
  </View>
</RNCSafeAreaView>
`;
